objects/Software_Assets_Config__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Asset_Name_Prefix__c</fullName>
        <defaultValue>&quot;SW - &quot;</defaultValue>
        <label>Asset Name Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Serial_Number__c</fullName>
        <defaultValue>950000000</defaultValue>
        <label>Latest Serial Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Max_Single_Trans_Assets__c</fullName>
        <defaultValue>497</defaultValue>
        <description>The maximum number of assets to create in a single transaction (to avoid flow limit errors)</description>
        <inlineHelpText>The maximum number of assets to create in a single transaction (to avoid flow limit errors)</inlineHelpText>
        <label>Max Single Trans Assets</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Software Assets Config</label>
</CustomObject>